--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -24,7 +24,7 @@
             min-width: 83px
         &-network
             display: flex
-            align-content: start
+            align-items: start
             grid-row: 2 / 4
             grid-column: span 2
     &__legal
